Java 8+ modernizations
+ Generics
+ for loop
+ lambda expression
+ Java style array declaration instead of C-style
+ List.of() / Set.of()
+ Collections.emptyIterator()
+ Boolean.TRUE
+ Objects.equals

Signed-off-by: pizzi80 <paolo@given2.com>