@@ -25,6 +25,7 @@ import static com.sun.faces.renderkit.RenderKitUtils.PredefinedPostbackParameter
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -111,14 +112,9 @@ public abstract class StateHelper {
 
     public static void createAndStoreCryptographicallyStrongTokenInSession(HttpSession session) {
         ByteArrayGuardAESCTR guard = new ByteArrayGuardAESCTR();
-        String clearText = "" + System.currentTimeMillis();
+        String clearText = String.valueOf(System.currentTimeMillis());
         String result = guard.encrypt(clearText);
-        try {
-            result = URLEncoder.encode(result, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            LOGGER.log(Level.SEVERE, "Unable to URL encode cryptographically strong token, storing clear text in session instead.", e);
-            result = clearText;
-        }
+        result = URLEncoder.encode(result, StandardCharsets.UTF_8);
         session.setAttribute(TOKEN_NAME, result);
 
     }
